--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.team {
+.name-team {
   font-size: 2rem;
   font-weight: 600;
 }
@@ -108,6 +108,10 @@ body {
   }
   .teams-div {
     margin: 100px 140px 0 140px;
+  }
+  .name-team {
+    font-weight: 900;
+    letter-spacing: 3px;
   }
   #icon-board {
     display: none;
