--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 218, 91, 91;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -44,7 +44,7 @@ body {
 .logo {
   position: absolute;
   top: 15px;
-  left: calc(50% - 70px);
+  left: calc(50% - 72px);
 }
 
 .timer-game {
@@ -73,14 +73,12 @@ body {
   opacity: .7;
 }
 
-.start-button, .pause-button {
-  position: relative;
-  top: 60%;
+.start-button:hover {
+  filter: drop-shadow(0 0 20px #22C55E);
 }
 
-.reset-button {
-  position: relative;
-  top: 50%;
+.pause-button:hover {
+  filter: drop-shadow(0 0 20px #CA8A04);
 }
 
 .reset-button:hover {
@@ -116,6 +114,7 @@ body {
 @media (min-width:1100px) {
   body {
     width: 100%;
+    height: 100%;
   }
   .teams-div {
     margin: 100px 140px 0 140px;
@@ -127,37 +126,7 @@ body {
   }
   .score {
     font-size: 14rem;
-  }
-  .team-feature {
-    font-size: 1.8rem;
-    background-color: #F44336;
-    border-radius: 5px;
-  }
-  #icon-board {
-    display: none;
-  }
-  .reset-button {
-    display: none;
-  }
-  .start-button, .pause-button {
-    display: none;
-  }
-}
-
-@media (min-width:2100px) {
-  body {
-    width: 100%;
-  }
-  .teams-div {
-    margin: 100px 140px 0 140px;
-  }
-  .name-team {
-    font-weight: 900;
-    letter-spacing: 3px;
-    font-size: 4rem;
-  }
-  .score {
-    font-size: 18rem;
+    padding: 0;
   }
   .team-feature {
     font-size: 1.8rem;
