--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 218, 91, 91;
+  --background-end-rgb: 253, 230, 138;
   --footer-text-light: 255, 255, 255; 
 }
 
@@ -147,6 +147,9 @@ footer {
     display: none;
   }
   .start-button, .pause-button {
+    display: none;
+  }
+  .footer {
     display: none;
   }
 }
